--- a/smartphone.css
+++ b/smartphone.css
@@ -21,7 +21,7 @@
 	padding: 0;
 	box-sizing: border-box;
     border: 3px solid white;
-    width: 33vw;
+    width: 99vw;
     overflow-y: hidden;
 }
 
@@ -70,7 +70,7 @@
 p {
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 500;
-    font-size: 2vw;
+    font-size: 5vw;
     margin-top: 5px;
     margin-bottom: 0;
 }
@@ -89,27 +89,26 @@ p {
     position: relative;
     background-color: rgba(255, 255, 255, 0.9);
     display: table;
-    width: 30vw;
-    height: 3.0vw;
+    width: 90vw;
+    height: 12vw;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 1vw;
+    margin-bottom: 1.3vw;
     padding: auto;
     border-radius: 0vw;
-    padding: 0.75vw 0;
+    padding: auto 0;
+    padding-top: 1vw;
     color: rgb(165, 165, 165);
     z-index: 3;
 }
 
 .event_text {
-    padding: 1vw auto;
+    padding: 0 auto;
     display: table-cell;
     vertical-align: middle;
-    font-size: max(1.45vw, 10px);
+    font-size: max(2vw, 14px);
     font-weight: bold;
     text-align: center;
-    line-height: 3.0vw;
-    padding-top: 0.25vw;
 }
 
 .event:hover {
@@ -197,10 +196,10 @@ label:hover {
 
 .close_button {
     position: absolute;
-    top: -0.5vw;
-    right: 0vw;
-    width: 1vw;
-    height: 1vw;
+    top: -2vw;
+    right: -2vw;
+    width: 4vw;
+    height: 4vw;
     opacity: 0;
 }
 
@@ -208,5 +207,5 @@ label:hover {
     width: 100%;
     height: 100%;
     color: gray;
-    font-size: 1.5vw;
+    font-size: 4vw;
 }
